--- a/FancyImageUploader/Web.config
+++ b/FancyImageUploader/Web.config
@@ -50,7 +50,7 @@
   <connectionStrings>
     <add name="PhotoGalleryEntities" connectionString="metadata=res://*/Models.GalleryModel.csdl|res://*/Models.GalleryModel.ssdl|res://*/Models.GalleryModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\PhotoGallery.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="FancyImageUploaderContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=FancyImageUploaderContext-20140609215157; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FancyImageUploaderContext-20140609215157.mdf"
+    <add name="ShareitDatabase" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=ShareitDatabaset-20140609215157; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|ShareitDatabaset-20140609215157.mdf"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
