пока что работает, но криво
Создались вьюшки не с теми именами полей

--- a/FancyImageUploader/FancyImageUploader.csproj
+++ b/FancyImageUploader/FancyImageUploader.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\FileController.cs" />
+    <Compile Include="Controllers\FolderController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -91,6 +92,10 @@
     <Compile Include="Migrations\201406121454335_file_model_added.cs" />
     <Compile Include="Migrations\201406121454335_file_model_added.Designer.cs">
       <DependentUpon>201406121454335_file_model_added.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201406121558181_folder_model_added.cs" />
+    <Compile Include="Migrations\201406121558181_folder_model_added.Designer.cs">
+      <DependentUpon>201406121558181_folder_model_added.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\FileModel.cs" />
@@ -193,6 +198,9 @@
     <EmbeddedResource Include="Migrations\201406121454335_file_model_added.resx">
       <DependentUpon>201406121454335_file_model_added.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201406121558181_folder_model_added.resx">
+      <DependentUpon>201406121558181_folder_model_added.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\File\Index.cshtml" />
@@ -208,6 +216,21 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\File\Delete.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Folder\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Folder\Details.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Folder\Create.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Folder\Edit.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Folder\Delete.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
