--- a/FancyImageUploader/FancyImageUploader.csproj
+++ b/FancyImageUploader/FancyImageUploader.csproj
@@ -98,6 +98,8 @@
       <DependentUpon>201406121558181_folder_model_added.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\AlbumModel.cs" />
+    <Compile Include="Models\UserDataModel.cs" />
     <Compile Include="Models\FileModel.cs" />
     <Compile Include="Models\FolderModel.cs" />
     <Compile Include="Models\RoleModel.cs" />
@@ -231,6 +233,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Folder\Delete.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\AlbumsPreview.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
